@@ -5,25 +5,22 @@
 
 package DA353A_programmering2_datastrukturer.labbar.lab8;
 
-
 import DA353A_programmering2_datastrukturer.labbar.lab5.Stack;
-import DA353A_programmering2_datastrukturer.labbar.lab7.f7.LinkedList;
+import DA353A_programmering2_datastrukturer.labbar.lab7.f7.ArrayList;
 
 import java.util.EmptyStackException;
-import java.util.List;
-import java.util.NoSuchElementException;
 
 /**
- * Created by Sebastian Börebäck on 2016-02-02.
+ * Created by seb on 2016-02-03.
  */
-public class LinkedStack<E> implements Stack<E> {
+public class ArrayListStack<E> implements Stack<E> {
 
-	private LinkedList<E> list = new LinkedList<E>();
 
+	ArrayList<E> list = new ArrayList<E>();
 
 	@Override
 	public void push(E element) {
-		list.add(0,element);
+		list.addLast(element);
 	}
 
 	@Override
@@ -31,28 +28,22 @@ public class LinkedStack<E> implements Stack<E> {
 		if (isEmpty()) {
 			throw new EmptyStackException();
 		}
-		return list.remove(0);
+		return list.removeLast();
 	}
 
 	@Override
 	public E peek() {
-		if (isEmpty()) {
-			throw new EmptyStackException();
-		}
-		return list.get(0);
+		//titta po sista
+		return list.get(size()-1);
 	}
 
 	@Override
 	public boolean isEmpty() {
-		return (list.size()==0);
+		return (size()==0);
 	}
 
 	@Override
 	public int size() {
 		return list.size();
-	}
-
-	public boolean empty() {
-		return isEmpty();
 	}
 }
